# practical-django

./: .gitignore  README.md  pyproject.toml
accounts/: urls.py
accounts/templates/accounts/: login.html
djangosnippets/: settings.py  urls.py
middleware/: middleware.py
snippets/: forms.py  models.py  tests.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_comment.py  0003_alter_snippet_table.py  0004_tag.py
snippets/templates/errors/: 404.html
snippets/templates/snippets/: comment_new.html  snippet_detail.html  top.html
snippets/templatetags/: pygmentize.py  wcwidth.py
templates/: base.html
